--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@angular/forms": "^20.2.0",
     "@angular/platform-browser": "^20.2.0",
     "@angular/router": "^20.2.0",
+    "bootstrap": "^5.3.8",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
